<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/shareItem1"
            android:icon="@drawable/ic_share"
            android:title="@string/share_game"
            app:showAsAction="always" />
        <item
            android:id="@+id/volumeItem2"
            android:icon="@drawable/ic_volume_up"
            android:title="@string/app_sound"
            app:showAsAction="always" />
        <item
            android:id="@+id/aboutItem4"
            android:icon="@drawable/ic_about1"
            android:title="@string/about_game"
            app:showAsAction="always" />
    </group>
</menu>