<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layoutDirection="ltr"
    android:padding="@dimen/paddingbottom"
    android:background="@drawable/bg_note_loss_dialog">

    <TextView
        android:id="@+id/title_loss"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/loss"
        android:textSize="@dimen/textsizebold"
        android:textColor="@color/red"
        android:textStyle="bold"
        android:gravity="center"/>
    <TextView
        android:id="@+id/reward_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/rewardcontent"
        android:gravity="center"
        android:textColor="@color/boldblue"
        android:textStyle="italic"
        android:textSize="@dimen/textsize"
        android:layout_marginTop="@dimen/margintop10"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="@dimen/margintop">

        <Button
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:text="@string/cancle"
            android:textAllCaps="false"
            android:background="@drawable/btn_selector_logout"
            android:textColor="@color/white"
            android:textSize="@dimen/textsizemedium"
            android:layout_alignParentStart="true"
            tools:ignore="RtlCompat" />

        <Button
            android:id="@+id/watch"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:text="@string/watch"
            android:textAllCaps="false"
            android:background="@drawable/watch_btn_selector"
            android:textColor="@color/white"
            android:textSize="@dimen/textsizemedium"
            android:layout_alignParentEnd="true"
            tools:ignore="RtlCompat" />

        <TextView
            android:id="@+id/timer"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:text="3"
            android:textAllCaps="false"
            android:background="@drawable/watch_timer_bg_btn"
            android:textColor="@color/white"
            android:textSize="@dimen/textsize20"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_toStartOf="@id/watch"
            tools:ignore="RtlCompat" />

    </RelativeLayout>

</LinearLayout>