<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/margintop"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/margintop50">

            <TextView
                android:id="@+id/about_game"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.1"
                android:gravity="center"
                android:text="@string/about_game"
                android:textColor="@color/white"
                android:textSize="@dimen/textsize20"
                android:textStyle="bold" />

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.8">

                <TextView
                    android:id="@+id/about_content"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="start"
                    android:scrollbars="vertical"
                    android:text="@string/about_content"
                    android:textColor="@color/white"
                    android:textSize="@dimen/textsizemedium"
                    android:background="@drawable/bg_text_about"
                    android:padding="@dimen/startendtopbottom"/>
            </ScrollView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="@dimen/marginend"
                android:layout_marginEnd="@dimen/marginend"
                android:layout_marginTop="@dimen/margintop10"
                android:gravity="center"
                android:orientation="horizontal"
                android:layoutDirection="ltr">

                <TextView
                    android:id="@+id/view_reward_ad"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.7"
                    android:gravity="center"
                    android:text="@string/about_view_adv"
                    android:textColor="@color/white"
                    android:textSize="@dimen/textsizemedium"
                    android:textStyle="bold|italic" />

                <Button
                    android:id="@+id/watch"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/marginstart"
                    android:layout_weight="0.3"
                    android:background="@drawable/next_btn_selector"
                    android:text="@string/watch"
                    android:textColor="@color/white"
                    android:textSize="@dimen/textsizemedium"
                    android:textAllCaps="false"
                    tools:ignore="RtlCompat" />

            </LinearLayout>

            <Button
                android:id="@+id/okbtn"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="@dimen/marginstartendtopbottom"
                android:layout_weight="0.1"
                android:background="@drawable/ok_btn_selector"
                android:text="@string/ok"
                android:textColor="@color/white"
                android:textSize="@dimen/textsizemedium"
                android:textAllCaps="false"/>

        </LinearLayout>

        <View
            android:id="@+id/viewscroll"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:background="@drawable/view_scroll"
            android:layout_gravity="start|center"
            android:layout_marginTop="@dimen/margintophigh"
            android:layout_marginStart="@dimen/margintop"
            android:layout_marginEnd="@dimen/margintop" />

        <com.google.android.gms.ads.AdView
            xmlns:ads="http://schemas.android.com/apk/res-auto"
            android:id="@+id/adView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|top"
            ads:adSize="BANNER"
            ads:adUnitId="ca-app-pub-1357552008801218/6677452205">
        </com.google.android.gms.ads.AdView>

    </FrameLayout>

</LinearLayout>